Fixed submission page progress bar text overlapping

--- a/www/MainApp/css/multistepform.css
+++ b/www/MainApp/css/multistepform.css
@@ -200,3 +200,8 @@ body {
     text-decoration: none;
 }
 
+@media only screen and (max-width: 570px) {
+  #progressbar li {
+    font-size: 0px;
+  }
+}
